css/custom.css
body {
  font -font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !important;
  color: #323232 !important;
}

.nice_font{
    
}

#mainNav {
    position: fixed;
}
    
.responsive{
	width:100%;
	height:50%;
}

.carousel-inner img {
  	width: 100%;
  	height: 100%;
}

iframe {
	margin:0 auto;
	display: block;
}

@media screen and (min-width: 980px) /* Desktop */ {
  section {
    padding: 70px !important;
    min-height: 100vh;
  }
  #myCarousel, .carousel-inner {
    max-height: 100vh !important;
  }
}

@media only screen and (max-width: 768px) /* For mobile phones: */{
  
  iframe {
        max-width: 100% !important;
        width: auto !important;
        height: auto !important;
  }

  .gallery_image_div {
    	width:100% !important;
   }

  #popover_heading {
    font-size: 14px !important;
    width: 92% !important;
  }
  .carousel-inner>.item>a>img, .carousel-inner>.item>img {
    height: 100vh !important;
    object-fit: cover !important;
  }

  #navbarResponsive {
    text-align: center;
  }
}

.gallery-img {
	width:100% ;
	height:300px ;
	object-fit: cover;
}
.gallery_image_div {
	float:left;
	width:32%;
	padding: 20px;
}

#popover_modal {
	display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
#popover_heading {
  float: left;
  font-size: 26px;
  width: 95%;
  color: darkcyan;
}
.award_heading {
  color: darkslateblue;
  font-size:16px;
}

/* Modal Content */
#popover_modal_content {
  background-color: #fff;
  margin: auto;
  padding: 20px;
  //border: 1px solid #888;
  width: 60%;
  height: auto;
}

/* The Close Button */
#popover_modal_close_button {
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}
#popover_image_container {
	text-align: center;
  margin-top: 60px;
}
#popover_image_container > img {
	width: 100%;
	object-fit: cover;

}

#popover_modal_close_button:hover,
#popover_modal_close_button:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

